--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,9 +1,9 @@
 OVERALL
 -fully check db_ops (inserting and checking prs)
--use pyQT to create GUI for adding entries that uses above class(es) to update database
--create table (or something simple) to know if it works properly
+-use pyQT to create GUI for adding entries that uses db_ops functions to update database
+-create table in GUI (or something simple) to know if it works properly
 -use matplotlib / more pyQT to have user select data w menu and have it displayed in graph
 -pretty up (optional)
 
 SPECIFIC
--
+-remove calls to getUiType() in launch_dialog? it doesn't seem needed.
