updated ideas, outline for new date object storage format, and todo

--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -9,3 +9,4 @@ SPECIFIC
 -allow refined session graph plots
     ex: optional in/out filter, location filter
 -cutomize major_locator based on how many days are shown to prevent label overlap
+-change values of y-axis to letter grades if session (i.e. 11.75 --> 5.11d OR 7 --> v7)
