updated todo and ideas

--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -2,8 +2,8 @@ OVERALL
 - fully check db_ops (inserting and checking prs)
 - fully check GUI functionality (empty fields and marshalling)
 - add table into GUI to display data (using pyQT) ... use for editting/deleting?
-- use matplotlib / more pyQT to have user select data w menu and have it displayed in graph
-- caching?
+- fully check data visualization and dates functionality
+- personalized caching system to save stored data
 - pretty up (optional)
 
 SPECIFIC
@@ -11,5 +11,3 @@ SPECIFIC
     ex: optional in/out filter, location filter
 - change values of y-axis to letter grades if session (i.e. 11.75 --> 5.11d OR 7 --> v7)
 - x-axis labels good? (m/d and m/y too similar?)
-- add reset button for dates in case user looses data out of window
-
