--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -7,6 +7,8 @@ OVERALL
 - pretty up (optional)
 
 SPECIFIC
+- move constant values in wall_witness to constants file
+- refresh button for graph window
 - allow refined session graph plots
     ex: optional in/out filter, location filter
 - change values of y-axis to letter grades if session (i.e. 11.75 --> 5.11d OR 7 --> v7)
