--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -7,6 +7,7 @@ OVERALL
 - pretty up (optional)
 
 SPECIFIC
+- unit test clear_cache_by_type
 - utilize cache object in dbops object
     - clear cache when adding data
     - attempt to use cache when querying data
