--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -6,11 +6,15 @@ OVERALL
 - add table into GUI to display data (using pyQT) ... use for editting/deleting?
 - pretty up (optional)
 
+!!! CRITICAL !!!
+- cannot assume date range in cache is 1 continuous range so change it to store list of date ranges
+    - or just only allow cache to grow if new quer is adjacent, otherwise clear it and begin new?
+
+BUGS
+- refresh dates seems to query twice for each active axis. second query only looks at cache.
+
 SPECIFIC
-- unit test clear_cache_by_type
-- utilize cache object in dbops object
-    - clear cache when adding data
-    - attempt to use cache when querying data
+- fix bugs ^
 - get on data point to left / right of graph edges so trend lines extend to edge? (how?)
 - allow refined session graph plots
     ex: optional in/out filter, location filter
