updated todo for later

--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -9,17 +9,17 @@ OVERALL
 BUGS
 - can only assume date range in cache is 1 continuous range iff we only allow cache to grow if new query is adjacent, otherwise clear it and begin new
 	- case where use will ahve two non-adjacent date ranges is rare
-- refresh dates seems to query twice for each active axis. second query only looks at cache (which is how it should work), but why query at all?
+	- NEED TO: add check that new data is adjacent -- how?
+- refresh dates seems to query twice for each active axis. second query only looks at cache (which is how it should work), but why query a second time at all?
 
 SPECIFIC
 - execute bugs ^
-- change constants.graph_ax_options_list to not include '--', and just manually add it in mainwindow ui logic
-	- then change self.data_options_list creation line to remove filter of != '--'
-- get on data point to left / right of graph edges so trend lines extend to edge (how?)
-- allow refined session graph plots
+- get data point to left / right of graph edges so trend lines extend to edge (how to do efficiently?)
+- allow refined session fitlering for graph plots
     ex: optional in/out filter, location filter
+		- add to axis option list or through some other functionality?
 - change values of y-axis to letter grades if session (i.e. 11.75 --> 5.11d OR 7 --> v7)
 	- also show units is weight
 		- toggle between lbs/kgs?
 - fix x-axis labels (recheck granularities)
-    - 10 days is bad
+    -> 10 days is bad!!
